<resources>
    <string name="app_name">back_stack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="result">Result</string>
    <string name="textview">TextView</string>
    <string name="home">Home</string>
    <string name="question_1">Question 1</string>
    <string name="context_question1">1 + 1 = ?</string>
    <string name="option1_1">0</string>
    <string name="option1_2">1</string>
    <string name="option1_3">2</string>
    <string name="option1_4">3</string>
    <string name="submit">Submit</string>
    <string name="question_2">Question 2</string>
    <string name="context_question2">1 * 1 = ?</string>
    <string name="option2_1">0</string>
    <string name="option2_2">1</string>
    <string name="option2_3">2</string>
    <string name="option2_4">3</string>
    <string name="question_3">Question 3</string>
    <string name="context_question3">1 - 1 = ?</string>
    <string name="option3_1">0</string>
    <string name="option3_2">1</string>
    <string name="option3_3">2</string>
    <string name="option3_4">3</string>
    <string name="start">Start</string>
</resources>